--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,8 +1,11 @@
 [bumpversion]
-current_version = 1.0.0
+current_version = 1.0.2
+commit = True
+tag = True
+tag_name = v{new_version}
 
 [bumpversion:file:pyproject.toml]
 
-[bumpversion:file:src/rich_tree_cli/__init__.py]
+[bumpversion:file:src/singleton_base/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
