--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "singleton-base"
 version = "1.0.2"
-description = "Add your description here"
+description = "A type-friendly, thread-safe singleton base class for Python 3.9+. Very simple to use and test-friendly."
 readme = "README.md"
 authors = [
     { name = "chaz", email = "pypi@tachyon.top" }
