--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
 name = "singleton-base"
-version = "1.0.3"
+version = "1.0.4"
 description = "A type-friendly, thread-safe singleton base class for Python 3.9+. Very simple to use and test-friendly."
 readme = "README.md"
 authors = [
-    { name = "chaz", email = "pypi@tachyon.top" }
+    { name = "chaz", email = "bright.lid5647@fastmail.com" }
 ]
 requires-python = ">=3.9"
 dependencies = []
